--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Backend.Contract\Backend.Contract.csproj" />
   </ItemGroup>
 
