Refactored Backend. Replace custom authenticationscheme with default Cookie scheme configured to forward Challenge behavior to default one that responses plain 401 instead of 302 to Account/login?redirectUrl={}.

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ClientHost" : "https://localhost:7004"
+  "ClientHost": {
+    "Name": "Cloundflare",
+    "Host": "https://localhost:7004",
+    "Login": "/login"
+  }
 }
