--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Frontend/Notes.md
+/Backend/BackendNotes.md
+/Frontend/FrontendNotes.md
